fixing spacing with how notes are displayed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,15 +73,17 @@ button:active {
   left: 1px;
 }
 
-#notes li {
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+#notes ul {
   position: relative;
   list-style-type: disc;
   display: block;
   float: left;
   width: 340px;
   height: 250px;
-  padding: 8px 12px;
   border-radius: 5px;
-  margin: 0 5px 12px;
 }
-
